add service pages

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,25 +1,15 @@
 <!--Footer-->
 <footer class="footer">
   <div class="container footer-container">
-    <div class="footer-contact">
-      <ul class="address-list">
-        <li class="address-list__item">
-          <a href="mailto: cpbsecurity@email.cz" class="address-list__link">cpbsecurity@email.cz</a>
-        </li>
-        <li class="address-list__item">
-          <a href="tel:+420603392943" class="address-list__link">+420 603392943</a>
-        </li>
-      </ul>
-    </div>
     <div class="footer-button">
-      <button class="hero__button" type="button" data-modal-open-footer>KONTAKTUJTE MĚ</button>
+      <button class="hero__button" type="button" data-modal-open-footer>KONTAKTUJTE NÁS</button>
     </div>
     <div class="join">
-      <p class="join__title">Přidejte se</p>
+      <p class="join__title">Sledujte nás</p>
       <ul class="join__list">
         <li class="join__item">
           <a target="_blank" href="https://www.instagram.com/cpbsecurity/" class="join__link"
-            ><svg height="40" width="40" class="social-list__icon">
+            ><svg height="30" width="30" class="social-list__icon">
               <use href="../images/symbol-defs.svg#icon-instagram-1"></use>
             </svg>
           </a>
@@ -29,7 +19,7 @@
             href="https://www.facebook.com/profile.php?id=100084510293669"
             target="_blank"
             class="join__link"
-            ><svg height="40" width="40" class="social-list__icon">
+            ><svg height="30" width="30" class="social-list__icon">
               <use href="../images/symbol-defs.svg#icon-facebook-1"></use>
             </svg>
           </a>
