--- a/src/partials/formular.html
+++ b/src/partials/formular.html
@@ -6,7 +6,7 @@
       </svg>
     </button>
     <form class="contact-form" id="formular-form">
-      <p class="contact-form__title">Zajem o prace</p>
+      <p class="contact-form__title">Zájem o práci</p>
       <label class="contact-form__label">
         <span class="contact-form__text">Jméno a Přijmení</span>
         <span class="contact-form__block">
@@ -45,13 +45,13 @@
         </span>
       </label>
       <label class="contact-form__label">
-        <span class="contact-form__text">O jaku pozice mate zajem?</span>
+        <span class="contact-form__text">O jakou pozici máte zájem?</span>
         <span class="contact-form__block"
           ><input type="text" class="contact-form__input" name="profession" required />
         </span>
       </label>
       <label class="contact-form__label">
-        <span class="contact-form__text">Localita vykonu prace</span>
+        <span class="contact-form__text">Lokalita výkonu práce</span>
         <span class="contact-form__block"
           ><input type="text" class="contact-form__input" name="location" />
         </span>
