--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,10 +1,12 @@
 <!--Hero-->
 <section class="hero" id="hero">
-  <div class="hero_background-field">
-    <div class="container">
-      <h1 class="section__title">CHRÁNÍME VÁS A VÁŠ MAJETEK</h1>
-      <h2 class="subtitle active">C.P.B. SECURITY</h2>
-      <button class="hero__button" type="button" data-modal-open>KONTAKTUJTE MĚ</button>
+  <div class="hero__box">
+    <div class="hero_background-field">
+      <div class="container">
+        <h1 class="section__title">CHRÁNÍME VÁS A VÁŠ MAJETEK</h1>
+        <h2 class="subtitle active">C.P.B. SECURITY</h2>
+        <button class="hero__button" type="button" data-modal-open>KONTAKTUJTE NÁS</button>
+      </div>
     </div>
   </div>
 </section>
