--- a/src/partials/our_services.html
+++ b/src/partials/our_services.html
@@ -2,85 +2,91 @@
   <div class="container">
     <h2 class="section__title active">Naše Služby</h2>
     <ul class="cards-list">
-      <li class="cards-list__item">
-        <a href="./partials/security_services.html" class="cards-list__link" target="_blank">
-          <div class="cards-list__picture-box">
-            <picture>
-              <source
-                srcset="../images/cards1@1x.webp 1x, ../images/cards1@2x.webp 2x"
-                type="image/webp"
-              />
-              <source srcset="../images/cards1@1x.jpg 1x, ../images/cards1@2x.jpg 2x" />
-              <img src="../images/cards1@1x.jpg" alt="security guard" class="cards-list__img" />
-            </picture>
-          </div>
-          <h3 class="cards-list__title">Bezpečnostní služby</h3>
-        </a>
+      <li class="cards-list__item" data="guard">
+        <div class="cards-list__picture-box">
+          <picture>
+            <source
+              srcset="../images/cards1@1x.webp 1x, ../images/cards1@2x.webp 2x"
+              type="image/webp"
+            />
+            <source srcset="../images/cards1@1x.jpg 1x, ../images/cards1@2x.jpg 2x" />
+            <img
+              src="../images/cards1@1x.jpg"
+              alt="security guard"
+              class="cards-list__img"
+              data="guard"
+            />
+          </picture>
+        </div>
+        <h3 class="cards-list__title" data="guard">Bezpečnostní služby</h3>
       </li>
-      <li class="cards-list__item">
-        <a href="" class="cards-list__link">
-          <div class="cards-list__picture-box">
-            <picture>
-              <source
-                srcset="../images/cards3@1x.webp 1x, ../images/cards3@2x.webp 2x"
-                type="image/webp"
-              />
-              <source srcset="../images/cards3@1x.jpg 1x, ../images/cards3@2x.jpg 2x" />
-              <img src="../images/cards3@1x.jpg" alt="security camera" class="cards-list__img" />
-            </picture>
-          </div>
-          <h3 class="cards-list__title">Zabezpečovací a kamerové systémy</h3>
-        </a>
+      <li class="cards-list__item" data="camera">
+        <div class="cards-list__picture-box">
+          <picture>
+            <source
+              srcset="../images/cards3@1x.webp 1x, ../images/cards3@2x.webp 2x"
+              type="image/webp"
+            />
+            <source srcset="../images/cards3@1x.jpg 1x, ../images/cards3@2x.jpg 2x" />
+            <img
+              src="../images/cards3@1x.jpg"
+              alt="security camera"
+              class="cards-list__img"
+              data="camera"
+            />
+          </picture>
+        </div>
+        <h3 class="cards-list__title" data="camera">Zabezpečovací a kamerové systémy</h3>
       </li>
-      <li class="cards-list__item">
-        <a href="" class="cards-list__link">
-          <div class="cards-list__picture-box">
-            <picture>
-              <source
-                srcset="../images/cards2@1x.webp 1x, ../images/cards2@2x.webp 2x"
-                type="image/webp"
-              />
-              <source srcset="../images/cards2@1x.jpg 1x, ../images/cards2@2x.jpg 2x" />
-              <img
-                src="../images/cards2@1x.jpg"
-                alt="security monitoring"
-                class="cards-list__img"
-              />
-            </picture>
-          </div>
-          <h3 class="cards-list__title">Monitoring objektů PCO</h3>
-        </a>
+      <li class="cards-list__item" data="monitoring">
+        <div class="cards-list__picture-box">
+          <picture>
+            <source
+              srcset="../images/cards2@1x.webp 1x, ../images/cards2@2x.webp 2x"
+              type="image/webp"
+            />
+            <source srcset="../images/cards2@1x.jpg 1x, ../images/cards2@2x.jpg 2x" />
+            <img
+              src="../images/cards2@1x.jpg"
+              alt="security monitoring"
+              class="cards-list__img"
+              data="monitoring"
+            />
+          </picture>
+        </div>
+        <h3 class="cards-list__title" data="monitoring">Monitoring objektů PCO</h3>
       </li>
-      <li class="cards-list__item">
-        <a href="" class="cards-list__link">
-          <div class="cards-list__picture-box">
-            <picture>
-              <source
-                srcset="../images/cards4@1x.webp 1x, ../images/cards4@2x.webp 2x"
-                type="image/webp"
-              />
-              <source srcset="../images/cards4@1x.jpg 1x, ../images/cards4@2x.jpg 2x" />
-              <img src="../images/cards4@1x.jpg" alt="cleaning work" class="cards-list__img" />
-            </picture>
-          </div>
+      <li class="cards-list__item" data="cleaning">
+        <div class="cards-list__picture-box">
+          <picture>
+            <source
+              srcset="../images/cards4@1x.webp 1x, ../images/cards4@2x.webp 2x"
+              type="image/webp"
+            />
+            <source srcset="../images/cards4@1x.jpg 1x, ../images/cards4@2x.jpg 2x" />
+            <img
+              src="../images/cards4@1x.jpg"
+              alt="cleaning work"
+              class="cards-list__img"
+              data="cleaning"
+            />
+          </picture>
+        </div>
 
-          <h3 class="cards-list__title">Úklidové služby</h3>
-        </a>
+        <h3 class="cards-list__title" data="cleaning">Úklidové služby</h3>
       </li>
-      <li class="cards-list__item">
-        <a href="" class="cards-list__link">
-          <div class="cards-list__picture-box">
-            <picture>
-              <source
-                srcset="../images/cards5@1x.webp 1x, ../images/cards5@2x.webp 2x"
-                type="image/webp"
-              />
-              <source srcset="../images/cards5@1x.jpg 1x, ../images/cards5@2x.jpg 2x" />
-              <img src="../images/cards5@1x.jpg" alt="hostess" class="cards-list__img" />
-            </picture>
-          </div>
-          <h3 class="cards-list__title">Hostesky</h3>
-        </a>
+      <li class="cards-list__item" data="hostess">
+        <div class="cards-list__picture-box">
+          <picture>
+            <source
+              srcset="../images/cards5@1x.webp 1x, ../images/cards5@2x.webp 2x"
+              type="image/webp"
+            />
+            <source srcset="../images/cards5@1x.jpg 1x, ../images/cards5@2x.jpg 2x" />
+          </picture>
+          <img src="../images/cards5@1x.jpg" alt="hostess" class="cards-list__img" data="hostess" />
+        </div>
+        <h3 class="cards-list__title" data="hostess">Hostesky</h3>
       </li>
     </ul>
   </div>
