--- a/src/partials/career.html
+++ b/src/partials/career.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h2 class="section__title active">Přidej se do našeho týmu</h2>
     <div class="career__wrapper">
-      <p class="career__text">Vplni jednoduchyj formulař a zavolame tobě!</p>
+      <p class="career__text">Vyplň jednoduchý formulář a mi ti zavoláme!</p>
       <button class="career__btn" data-menu-openf>Vplnit</button>
     </div>
   </div>
