--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,6 +1,6 @@
 <section class="section background" id="contact">
   <div class="container">
-    <h2 class="section__title active">Kontaktuj nás</h2>
+    <h2 class="section__title active">Kontaktujte nás</h2>
     <ul class="contact-list">
       <li class="contact-list__item">
         <ul class="contact-info">
@@ -8,19 +8,22 @@
             <svg class="contact-list__icon" width="25" height="25">
               <use href="../images/symbol-defs.svg#icon-calendar-lines"></use>
             </svg>
-            <p class="contact-list__text">Info o firme, nazev, ICO</p>
-          </li>
-          <li class="contact-info__item">
-            <svg class="contact-list__icon" width="25" height="25">
-              <use href="../images/symbol-defs.svg#icon-map-marker"></use>
-            </svg>
-            <p class="contact-list__text">Adresa</p>
+            <div>
+              <p class="contact-list__text">La bella MonaLisa s.r.o.</p>
+              <p class="contact-list__text">IČO: 07530048</p>
+              <p class="contact-list__text">SCHRÁNKA: ep5k6dt</p>
+              <p class="contact-list__text">DIČ: CZ07530048</p>
+              <p class="contact-list__text">
+                Adresa: <br />
+                U plynárny 131/16, Michle (Praha 4), 140 00 Praha
+              </p>
+            </div>
           </li>
           <li class="contact-info__item">
             <svg class="contact-list__icon" width="25" height="25">
               <use href="../images/symbol-defs.svg#icon-envelope"></use>
             </svg>
-            <a href="mailto: cpbsecurity@email.cz" class="address-list__link"
+            <a href="mailto: cpbsecurity@email.cz" class="contact-list__link"
               >cpbsecurity@email.cz</a
             >
           </li>
@@ -28,13 +31,13 @@
             <svg class="contact-list__icon" width="25" height="25">
               <use href="../images/symbol-defs.svg#icon-phone-call"></use>
             </svg>
-            <a href="tel:+420603392943" class="address-list__link">+420 603392943</a>
+            <a href="tel:+420774743780" class="contact-list__link">+420 774743780</a>
           </li>
         </ul>
       </li>
       <li class="contact-list__item google-wrapper">
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5104.072135077688!2d12.855460016264235!3d50.2352310934131!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a099260d2e3613%3A0xc2f9d1b29f0dffa4!2sArmy%20Shop!5e0!3m2!1sru!2scz!4v1668897676330!5m2!1sru!2scz"
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d327259.6132679169!2d14.560653!3d50.1477496!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470b9309850185a3%3A0xe055e673be75dfd3!2sCPB%20Security%20s.r.o.!5e0!3m2!1scs!2scz!4v1680465622716!5m2!1scs!2scz"
           width="100%"
           height="100%"
           style="border: 0"
