--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,7 +5,7 @@
       <a class="header__logo" href="./index.html" target="_self">
         <picture class="header__logo-img">
           <source
-            srcset="../images/logo.jpg 1x, ../images/logo_2x.jpg 2x"
+            srcset="../images/logo.jpeg 1x, ../images/logo_2x.jpeg 2x"
             type="image/jpeg"
             media="(min-width: 1200px)"
             width="100"
@@ -26,7 +26,7 @@
             height="85"
           />
           <source
-            srcset="../images/logo.jpg 1x, ../images/logo_2x.jpg 2x"
+            srcset="../images/logo.jpeg 1x, ../images/logo_2x.jpeg 2x"
             type="image/jpeg"
             media="(min-width: 768px)"
             width="85"
@@ -39,12 +39,12 @@
             height="60"
           />
           <source
-            srcset="../images/logo.jpg 1x, ../images/logo_2x.jpg 2x"
+            srcset="../images/logo.jpeg 1x, ../images/logo_2x.jpeg 2x"
             type="image/jpeg"
             width="60"
             height="60"
           />
-          <img src="../images/logo.jpg" alt="logotipe" width="60" height="60" />
+          <img src="../images/logo.jpeg" alt="logotipe" width="60" height="60" />
         </picture>
       </a>
       <nav class="nav">
@@ -53,7 +53,6 @@
           <li class="nav__item">
             <a class="nav__link" href="#our_services">Naše Služby</a>
           </li>
-          <li class="nav__item"><a class="nav__link" href="#galerie">Galerie</a></li>
           <li class="nav__item"><a class="nav__link" href="#contact">Kontakt</a></li>
           <li class="nav__item"><a class="nav__link" href="#career">Kariéra</a></li>
         </ul>
