--- a/src/sass/components/_contact-form.scss
+++ b/src/sass/components/_contact-form.scss
@@ -5,11 +5,8 @@
 
 .contact-form__title {
   font-family: var(--primary-font-family);
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
+  @include text(700, 20, 1.15, 0.03em);
   text-align: center;
-  letter-spacing: 0.03em;
   color: var(--secondary-text-color);
   margin-bottom: 12px;
 }
@@ -19,13 +16,10 @@
 }
 
 .contact-form__input {
-  width: 100%;
-  height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
+  @include input(100%, 40px, 4px);
   padding-left: 42px;
-  outline: none;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: var(--border-color-input);
+  transition: border-color var(--transition);
   &:focus {
     border-color: var(--accent-color);
     outline: none;
@@ -36,30 +30,26 @@
   display: block;
   width: 100%;
   height: 120px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
+  border: var(--border-color-input);
   border-radius: 4px;
   resize: none;
   padding: 12px 16px;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color var(--transition);
   &:focus {
     border-color: var(--accent-color);
     outline: none;
   }
   &::placeholder {
     font-family: var(--primary-font-family);
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.01em;
-    color: rgba(117, 117, 117, 0.5);
+    @include text(400, 12px, 1.16, 0.01em);
+    color: var(--input-text-color);
   }
 }
 
 .contact-form__text {
   display: inline-block;
   font-family: var(--primary-font-family);
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
+  @include text(400, 12px, 1.16, 0.01em);
   color: var(--secondary-text-color);
   margin-bottom: 4px;
 }
@@ -69,7 +59,7 @@
   left: 12px;
   top: 50%;
   transform: translateY(-50%);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill var(--transition);
   .contact-form__input:focus + & {
     fill: var(--accent-color);
   }
@@ -90,18 +80,15 @@
 
 .contact-form__button {
   font-family: var(--primary-font-family);
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
+  @include text(700, 16px, 1.88, 0.06em);
   text-align: center;
-  letter-spacing: 0.06em;
   color: var(--primary-text-color);
   background: var(--secondary-background-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: var(--button-shadow);
   border-radius: 4px;
   min-width: 200px;
   height: 50px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--transition);
   border: none;
   align-self: center;
   &:hover,
