--- a/src/sass/layout/_career.scss
+++ b/src/sass/layout/_career.scss
@@ -1,7 +1,6 @@
 .career__wrapper {
   height: 250px;
-  display: flex;
-  align-items: center;
+  @include flex-center();
   justify-content: center;
   flex-direction: column;
   padding-top: 30px;
@@ -32,21 +31,15 @@
 }
 
 .career__text {
-  font-weight: 600;
-  font-size: 22px;
-  line-height: 1.17;
+  @include text(600, 22px, 1.17, 0.03em);
   text-align: center;
-  letter-spacing: 0.03em;
   color: var(--primary-text-color);
   margin-bottom: 70px;
 }
 
 .career__btn {
   font-family: inherit;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 1.17;
-  letter-spacing: 0.06em;
+  @include text(600, 14px, 1.17, 0.06em);
   color: var(--primary-text-color);
   background-color: var(--secondary-background-color);
   cursor: pointer;
@@ -55,7 +48,7 @@
   border-radius: 10px;
   box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.15);
   border-width: 0;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--transition);
   animation: glowing 1300ms infinite;
 
   &:hover,
@@ -67,17 +60,17 @@
 @keyframes glowing {
   0% {
     background-color: var(--secondary-background-color);
-    box-shadow: 0 0 3px #815b07;
+    box-shadow: 0 0 3px var(--accent-color);
     transform: scale(0.85);
   }
   50% {
     background-color: var(--secondary-background-color);
-    box-shadow: 0 0 15px #815b07;
+    box-shadow: 0 0 15px var(--accent-color);
     transform: scale(1);
   }
   100% {
     background-color: var(--secondary-background-color);
-    box-shadow: 0 0 3px #815b07;
+    box-shadow: 0 0 3px var(--accent-color);
     transform: scale(0.85);
   }
 }
