--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,17 +1,20 @@
 .hero {
   text-align: left;
+
+  background-color: var(--primary-background-color);
+}
+
+.hero__box {
+  max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
-  max-width: 1600px;
-  background-color: var(--primary-background-color);
 }
 
 .hero_background-field {
   padding-top: 118px;
   padding-bottom: 118px;
   background-size: cover;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../../images/back_hero_mobile.jpg);
+  background-image: url(../../images/back_hero_mobile.jpg);
   background-position: center;
   background-color: var(--primary-background-color);
 
@@ -45,11 +48,8 @@
 
 .subtitle {
   font-family: var(--primary-font-family);
-  font-weight: 900;
-  font-size: 24px;
-  line-height: 1.62;
+  @include text(900, 24px, 1.62, 0.06em);
   text-align: left;
-  letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--primary-text-color);
   margin-bottom: 30px;
@@ -58,19 +58,16 @@
 
 .hero__button {
   font-family: inherit;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
+  @include text(700, 16px, 1.88, 0.06em);
   color: var(--primary-text-color);
   background-color: var(--secondary-background-color);
   cursor: pointer;
   min-width: 200px;
   padding: 10px 32px;
   border-radius: 10px;
-  box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.15);
+  box-shadow: var(--button-shadow);
   border-width: 0;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--transition);
 
   &:hover,
   &:focus {
