--- a/src/sass/layout/_our_services.scss
+++ b/src/sass/layout/_our_services.scss
@@ -15,7 +15,7 @@
   box-shadow: 3px 3px 3px rgba(49, 49, 47, 0.12), 3px 3px 3px rgba(49, 49, 47, 0.12),
     3px 3px 3px rgba(49, 49, 47, 0.12);
   border-radius: 0px 0px 4px 4px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--transition);
   &:hover,
   &:focus {
     border-color: var(--accent-color);
@@ -44,13 +44,10 @@
 }
 
 .cards-list__title {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.17;
+  @include text(500, 20px, 1.17, 0.03em);
   text-align: center;
-  letter-spacing: 0.03em;
   color: var(--primary-text-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--transition);
   &:hover,
   &:focus {
     color: var(--accent-color);
