--- a/src/partials/our_services.html
+++ b/src/partials/our_services.html
@@ -83,8 +83,13 @@
               type="image/webp"
             />
             <source srcset="../images/cards5@1x.jpg 1x, ../images/cards5@2x.jpg 2x" />
+            <img
+              src="../images/cards5@1x.jpg"
+              alt="hostess"
+              class="cards-list__img"
+              data="hostess"
+            />
           </picture>
-          <img src="../images/cards5@1x.jpg" alt="hostess" class="cards-list__img" data="hostess" />
         </div>
         <h3 class="cards-list__title" data="hostess">Hostesky</h3>
       </li>
