--- a/src/partials/formular.html
+++ b/src/partials/formular.html
@@ -13,7 +13,7 @@
           <input
             type="text"
             class="contact-form__input"
-            name="user-name"
+            name="name"
             required
             autofocus
             placeholder="Martin Luther"
@@ -26,7 +26,7 @@
           ><input
             type="tel"
             class="contact-form__input"
-            name="user-tel"
+            name="tel"
             required
             placeholder="+420 ___ ___ ___"
           />
@@ -47,7 +47,7 @@
       <label class="contact-form__label">
         <span class="contact-form__text">O jakou pozici máte zájem?</span>
         <span class="contact-form__block"
-          ><input type="text" class="contact-form__input" name="profession" required />
+          ><input type="text" class="contact-form__input" name="profession" />
         </span>
       </label>
       <label class="contact-form__label">
@@ -58,9 +58,14 @@
       </label>
       <label class="contact-form__label last">
         <span class="contact-form__text">Vaše zpráva (optional)</span>
-        <textarea class="contact-form__message" name="user-message" placeholder="Začnete psat">
+        <textarea class="contact-form__message" name="message" placeholder="Začnete psat">
         </textarea>
       </label>
+      <a
+        class="contact-form__text"
+        href="https://www.freeprivacypolicy.com/live/22bafdef-3d9b-4d12-be00-0a6b86ddcebe"
+        >Stisknutim souhlasíte se zpracováním osobních údajů</a
+      >
       <button type="submit" class="contact-form__button">Odeslat</button>
     </form>
   </div>
