--- a/src/partials/career.html
+++ b/src/partials/career.html
@@ -3,7 +3,7 @@
     <h2 class="section__title active">Přidej se do našeho týmu</h2>
     <div class="career__wrapper">
       <p class="career__text">Vyplň jednoduchý formulář a mi ti zavoláme!</p>
-      <button class="career__btn" data-menu-openf>Vplnit</button>
+      <button class="career__btn" data-menu-openf>Vyplnit</button>
     </div>
   </div>
 </section>
