--- a/src/partials/formular.html
+++ b/src/partials/formular.html
@@ -40,7 +40,7 @@
             class="contact-form__input"
             name="email"
             required
-            placeholder="Email"
+            placeholder="your_email@email.com"
           />
         </span>
       </label>
@@ -64,6 +64,7 @@
       <a
         class="contact-form__text"
         href="https://www.freeprivacypolicy.com/live/22bafdef-3d9b-4d12-be00-0a6b86ddcebe"
+        target="_blank"
         >Stisknutim souhlasíte se zpracováním osobních údajů</a
       >
       <button type="submit" class="contact-form__button">Odeslat</button>
