--- a/src/partials/modal_menu.html
+++ b/src/partials/modal_menu.html
@@ -43,6 +43,7 @@
       <a
         class="contact-form__text"
         href="https://www.freeprivacypolicy.com/live/22bafdef-3d9b-4d12-be00-0a6b86ddcebe"
+        target="_blank"
         >Stisknutim souhlasíte se zpracováním osobních údajů</a
       >
       <button type="submit" class="contact-form__button">Odeslat</button>
