--- a/src/partials/our_services.html
+++ b/src/partials/our_services.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h2 class="section__title active">Naše Služby</h2>
     <ul class="cards-list">
-      <li class="cards-list__item" data="guard">
+      <li class="cards-list__item guard">
         <div class="cards-list__picture-box">
           <picture>
             <source
@@ -10,17 +10,12 @@
               type="image/webp"
             />
             <source srcset="../images/cards1@1x.jpg 1x, ../images/cards1@2x.jpg 2x" />
-            <img
-              src="../images/cards1@1x.jpg"
-              alt="security guard"
-              class="cards-list__img"
-              data="guard"
-            />
+            <img src="../images/cards1@1x.jpg" alt="security guard" class="cards-list__img guard" />
           </picture>
         </div>
-        <h3 class="cards-list__title" data="guard">Bezpečnostní služby</h3>
+        <h3 class="cards-list__title guard">Bezpečnostní služby</h3>
       </li>
-      <li class="cards-list__item" data="camera">
+      <li class="cards-list__item camera">
         <div class="cards-list__picture-box">
           <picture>
             <source
@@ -31,14 +26,13 @@
             <img
               src="../images/cards3@1x.jpg"
               alt="security camera"
-              class="cards-list__img"
-              data="camera"
+              class="cards-list__img camera"
             />
           </picture>
         </div>
-        <h3 class="cards-list__title" data="camera">Zabezpečovací a kamerové systémy</h3>
+        <h3 class="cards-list__title camera">Zabezpečovací a kamerové systémy</h3>
       </li>
-      <li class="cards-list__item" data="monitoring">
+      <li class="cards-list__item monitoring">
         <div class="cards-list__picture-box">
           <picture>
             <source
@@ -49,14 +43,13 @@
             <img
               src="../images/cards2@1x.jpg"
               alt="security monitoring"
-              class="cards-list__img"
-              data="monitoring"
+              class="cards-list__img monitoring"
             />
           </picture>
         </div>
-        <h3 class="cards-list__title" data="monitoring">Monitoring objektů PCO</h3>
+        <h3 class="cards-list__title monitoring">Monitoring objektů PCO</h3>
       </li>
-      <li class="cards-list__item" data="cleaning">
+      <li class="cards-list__item cleaning">
         <div class="cards-list__picture-box">
           <picture>
             <source
@@ -67,15 +60,13 @@
             <img
               src="../images/cards4@1x.jpg"
               alt="cleaning work"
-              class="cards-list__img"
-              data="cleaning"
+              class="cards-list__img cleaning"
             />
           </picture>
         </div>
-
-        <h3 class="cards-list__title" data="cleaning">Úklidové služby</h3>
+        <h3 class="cards-list__title cleaning">Úklidové služby</h3>
       </li>
-      <li class="cards-list__item" data="hostess">
+      <li class="cards-list__item hostess">
         <div class="cards-list__picture-box">
           <picture>
             <source
@@ -83,15 +74,10 @@
               type="image/webp"
             />
             <source srcset="../images/cards5@1x.jpg 1x, ../images/cards5@2x.jpg 2x" />
-            <img
-              src="../images/cards5@1x.jpg"
-              alt="hostess"
-              class="cards-list__img"
-              data="hostess"
-            />
+            <img src="../images/cards5@1x.jpg" alt="hostess" class="cards-list__img hostess" />
           </picture>
         </div>
-        <h3 class="cards-list__title" data="hostess">Hostesky</h3>
+        <h3 class="cards-list__title hostess">Hostesky</h3>
       </li>
     </ul>
   </div>
