--- a/src/partials/helpers/cleaning_details.html
+++ b/src/partials/helpers/cleaning_details.html
@@ -1,6 +1,6 @@
 <div class="backdrop is-hidden cleaning__backdrop details__backdrop">
   <div class="details">
-    <button type="button" class="details__btn" data="cleaningDetails">
+    <button type="button" class="details__btn cleaning__details">
       <svg class="details__icon" width="18" height="18">
         <use href="../images/symbol-defs.svg#icon-close"></use>
       </svg>
